Icon visibility options

--- a/style.css
+++ b/style.css
@@ -74,12 +74,34 @@ img > #link {
   height: 10%;
 }
 
+#iconVisibilityX {
+  width: 10%;
+  height: 10%;
+}
+
 #shortcutX {
   width: 10%;
   height: 10%;
 }
 
 #dateFormatMenu {
+  background-color: black;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  font-size: 120%;
+  transition: opacity 0.5s;
+}
+
+#iconVisibilitySettings {
   background-color: black;
   border-radius: 10px;
   padding-top: 5px;
