--- a/assets/master.css
+++ b/assets/master.css
@@ -158,7 +158,7 @@ a:hover {
   padding-right: 2%;
 }
 
-#gSearch {
+#srchImg {
   background-color: transparent;
   font-family: 'Titillium Web', sans-serif;
   border-top-style: none;
@@ -172,12 +172,12 @@ a:hover {
   color: white;
 }
 
-#gSearchF {
+#srchBx {
   opacity: 0;
   transition: opacity 1s;
 }
 
-.gSearchImg {
+.srchBxImg {
   position: absolute;
   bottom: 0;
   left: 0;
