--- a/assets/master.css
+++ b/assets/master.css
@@ -64,15 +64,19 @@ a:hover {
   text-align: center;
 }
 
-.unsplashCred {
+.adTextStyle {
   font-family: 'Titillium Web', sans-serif;
   display: block;
   color: white;
   font-size: 100%;
   cursor: default;
-  margin-top: -3%;
+  margin-left: 70%;
   text-align: right;
   opacity: 0;
+  padding-right: 1%;
+  padding-bottom: 1%;
+  bottom: 0;
+  position: absolute;
   transition: opacity 0.5s, font-size 0.5s;
 }
 
