--- a/assets/master.css
+++ b/assets/master.css
@@ -1,4 +1,4 @@
-/*Copyright Benjamin Developments (c) 2016 - All rights reserved*/
+/*Copyright Benjamin Developments (c) 2016-2017 - All rights reserved*/
 
 .titanic {
   float: none;
