--- a/a/m.css
+++ b/a/m.css
@@ -19,7 +19,6 @@ header {
   margin-right: -8px;
   z-index: -1;
   background-size: cover;
-  /*opacity: 0.8;*/
   -webkit-filter: grayscale(1);
   transition: -webkit-filter 0.5s, opacity 0.2s;
 }
@@ -52,14 +51,16 @@ a:hover {
   cursor: default;
   padding-right: 15px;
   opacity: 1;
-  transition: opacity 0.5s;
+  -webkit-filter: grayscale(0);
+  transition: opacity 0.5, -webkit-filter 0.5;
 }
 
 .l {
   margin-top: 5%;
-  opacity: 0;
+  opacity: 1;
   cursor: default;
-  transition: opacity 0.3s;
+  -webkit-filter: grayscale(0);
+  transition: opacity 0.5s, -webkit-filter 0.5;
 }
 
 .om {
