--- a/a/m.css
+++ b/a/m.css
@@ -110,28 +110,6 @@ a:hover {
   transition: opacity 1s;
 }
 
-.md {
-  font-family: 'Titillium Web', sans-serif;
-  color: white;
-  margin-top: 1%;
-  text-align: center;
-  font-size: 300%;
-  cursor: default;
-  opacity: 0;
-  transition: opacity 0.6s;
-}
-
-.ma {
-  font-family: 'Titillium Web', sans-serif;
-  color: white;
-  margin-top: 2%;
-  cursor: default;
-  text-align: center;
-  font-size: 200%;
-  opacity: 0;
-  transition: opacity 0.8s;
-}
-
 .mc {
   font-family: 'Titillium Web', sans-serif;
   color: white;
@@ -142,6 +120,29 @@ a:hover {
   font-size: 1000%;
   opacity: 0;
   transition: opacity 0.4s;
+}
+
+.md {
+  font-family: 'Titillium Web', sans-serif;
+  color: white;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  text-align: center;
+  font-size: 300%;
+  cursor: default;
+  opacity: 0;
+  transition: opacity 0.6s;
+}
+
+.ma {
+  font-family: 'Titillium Web', sans-serif;
+  color: white;
+  padding-top: 2%;
+  cursor: default;
+  text-align: center;
+  font-size: 200%;
+  opacity: 0;
+  transition: opacity 0.8s;
 }
 
 .ts {
